corrected style.css to fix the title of the primary app which overflowed to top so changed position from absolute to relative

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,9 +213,12 @@ h1 {
   }
 
   .bottomright  {
-    position: absolute;
-    bottom: -450px;
-    left: 400px;
+    position: relative;
+    top: 150px;
+    bottom: auto;
+    left: 100px;
+    right: 10px;
+    width: 10%;
     font-size: 28px;
     background-color: cadetblue;
     color: white;
